api, spa and tests

--- a/Grosvenor.Portal.Web/ClientApp/src/index.html
+++ b/Grosvenor.Portal.Web/ClientApp/src/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HRMS</title>
+  <title>Loading...</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/fonts.css">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="ant-spin ant-spin-spinning ant-spin-lg spinner">
+      <span class="ant-spin-dot ant-spin-dot-spin ng-star-inserted">
+        <i class="ant-spin-dot-item"></i>
+        <i class="ant-spin-dot-item"></i>
+        <i class="ant-spin-dot-item"></i>
+        <i class="ant-spin-dot-item"></i>
+      </span>
+    </div>
+  </app-root>
 </body>
 </html>
