--- a/Grosvenor.Portal.Web/wwwroot/index.html
+++ b/Grosvenor.Portal.Web/wwwroot/index.html
@@ -42,6 +42,7 @@
     <section>
         <h3>Company Flats</h3>
         <p>Open <code>ClientApp</code> folder in <code>Visual Studio Code</code> and execute <code>npm install</code> and then <code>npm start</code> in a terminal.</p>
+        <p><a href="swagger">Api Documentation</a></p>
     </section>
 </body>
 </html>
